Added double tap input trigger for enhanced input system

--- a/GameplayUtilities.uplugin
+++ b/GameplayUtilities.uplugin
@@ -27,5 +27,11 @@
 			"LoadingPhase": "PreDefault",
 			"WhitelistPlatforms": ["Win64", "Win32", "Linux", "LinuxAArch64", "Mac"]
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "EnhancedInput",
+			"Enabled": true
+		}
 	]
 }
